--- a/app/assets/stylesheets/plansintroduction/posts.scss
+++ b/app/assets/stylesheets/plansintroduction/posts.scss
@@ -24,7 +24,7 @@
   padding-bottom: 18px;
   margin-left: 12px;
   margin-bottom: 0px;
-  width: 430px;
+  width: 100%;
 }
 
 .post-slogan {
@@ -33,7 +33,7 @@
   margin-left: 12px;
   margin-bottom: 0px;
   padding-bottom: 28px;
-  width: 430px;
+  width: 100%;
 }
 
 .upvote  {
