--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -53,10 +53,14 @@
 // index jumbotron
 
 .jumbotron {
-  background-image:url('https://ww2.sinaimg.cn/large/006tNbRwly1fhb39lpzvgj31hc0gon7k.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 450px;
+  // background-image:url('https://ww2.sinaimg.cn/large/006tNbRwly1fhb39lpzvgj31hc0gon7k.jpg');
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // height: 450px;
+  @media (min-width: 320px){ height: 160px; }
+  @media (min-width: 768px){ height: 280px; }
+  @media (min-width: 992px){ height: 450px; }
+  background: url('https://ww2.sinaimg.cn/large/006tNbRwly1fhb39lpzvgj31hc0gon7k.jpg') no-repeat scroll top center/ cover;
 }
 
 
@@ -67,7 +71,7 @@
 
       line-height: 1.42857143;
       background-color: #fff;
-      border: 0px solid #ddd;
+      border: 1px solid #fff;
       border-radius: 0px;
       -webkit-transition: border 0.2s ease-in-out;
       -o-transition: border 0.2s ease-in-out;
@@ -78,11 +82,15 @@
 .product-show-slogan {
   padding-bottom: 10px;
   margin-bottom: 0px;
+  width: 100%;
+  border: 1px solid #fff;
 }
 
 .product-show-slogan-2 {
   padding-bottom: 25px;
   margin-bottom: 0px;
+  width: 100%;
+  border: 1px solid #fff;
 }
 
 .product-title2 {
