warehouse product index zsy done

--- a/app/assets/stylesheets/warehouse/products.scss
+++ b/app/assets/stylesheets/warehouse/products.scss
@@ -72,13 +72,13 @@
 .product-title {
   color: #333333;
   font-size: 14px;
-  width: 232px;
+  width: 100%;
 }
 
 .product-slogan {
   color: #666666;
   font-size: 13px;
-  width: 232px;
+  width: 100%;
 }
 
 .product-price {
