warehouse product index zsy done adjustment

--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -64,7 +64,7 @@
             </div>
             <div class="row" >
                 <% @productsaw.each do |product| %>
-                    <div class=" col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-4 text-center" >
+                    <div class=" col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-3 text-center" >
                         <div style="max-width:232px;">
                             <div class="space-20">
                             </div>
@@ -80,6 +80,8 @@
                         </div>
                     </div>
                 <% end %>
+                <div class="col-md-3">
+                </div>
             </div>
         </div>
         <!-- CW -->
@@ -89,7 +91,7 @@
             </div>
             <div class="row" >
                 <% @productscw.each do |product| %>
-                    <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-4 text-center" >
+                    <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-3 text-center" >
                         <div style="max-width:232px;">
                             <div class="space-20">
                             </div>
@@ -105,6 +107,8 @@
                         </div>
                     </div>
                 <% end %>
+                <div class="col-md-3">
+                </div>
             </div>
         </div>
         <!--sw  -->
@@ -114,7 +118,7 @@
             </div>
             <div class="row">
                 <% @productssw.each do |product| %>
-                    <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-4 text-center" >
+                    <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-3 text-center" >
                         <div style="max-width:232px;">
                             <div class="space-20">
                             </div>
@@ -130,6 +134,8 @@
                         </div>
                     </div>
                 <% end %>
+                <div class="col-md-3">
+                </div>
             </div>
         </div>
         <!-- Convolum 特色 -->
