--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -64,7 +64,7 @@
             </div>
             <div class="row" >
                 <% @productsaw.each do |product| %>
-                    <div class=" col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-3 text-center" >
+                    <div class=" col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-3 text-center" style="padding:0px 5px;">
                         <div style="max-width:232px;">
                             <div class="space-20">
                             </div>
@@ -91,7 +91,7 @@
             </div>
             <div class="row" >
                 <% @productscw.each do |product| %>
-                    <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-3 text-center" >
+                    <div class="col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-3 text-center"  style="padding:0px 5px;">
                         <div style="max-width:232px;">
                             <div class="space-20">
                             </div>
@@ -118,7 +118,7 @@
             </div>
             <div class="row">
                 <% @productssw.each do |product| %>
-                    <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-3 text-center" >
+                    <div class="col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-3 text-center" style="padding:0px 5px;">
                         <div style="max-width:232px;">
                             <div class="space-20">
                             </div>
