--- a/app/views/common/_searchbar.html.erb
+++ b/app/views/common/_searchbar.html.erb
@@ -3,7 +3,7 @@
         <div class="search-box">
             <div class="container-fluid">
                 <div class="row" style="margin-top:80px;">
-                    <div class="col-md-4 col-md-offset-4">
+                    <div class="search-bar-position">
                         <div class="search-bar">
                             <%= form_tag search_products_path , :method => :get  do %>
                                 <div class="input-group " id="search-id" >
