--- a/app/views/common/_post.html.erb
+++ b/app/views/common/_post.html.erb
@@ -1,10 +1,10 @@
 <div class="row space-30">
-    <div class="col-md-8 col-md-offset-2">
-        <div class="col-md-12 show-post">
+    <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
+        <div class="col-xs-12 show-post">
             <div class="post-title-show">
                 <%= @post.title %>
             </div>
-            <hr style="margin: 20px 42px 18px 42px; border-top: 1.5px solid #e6e6e6;">
+            <hr class="post-hr" >
             <div class="post-description">
                 <%= raw @post.description %>
             </div>
