--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -755,13 +755,14 @@ margin-top: 0%;
    margin-left: 22px;
    margin-right: 22px;
    margin-bottom: 30px;
+   padding-bottom: 20px;
  }
 .post-title-show {
   margin-left: 22px;
   padding-top: 31.5px;
 }
 .post-hr {
-  margin: 20px 22px 18px 22px; 
+  margin: 20px 22px 18px 22px;
   border-top: 1.5px solid #e6e6e6;
 }
 }
@@ -802,4 +803,27 @@ margin-top: 0%;
       margin: 20px 42px 18px 42px;
       border-top: 1.5px solid #e6e6e6;
     }
+}
+
+//zsy product show
+@media (min-width: 320px) {
+  .shangpinxaingqing {
+    margin-top: 30px;
+    margin-left:20px;
+    padding-top: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .shangpinxaingqing {
+    margin-top: 30px;
+    margin-left:20px;
+  }
+}
+
+@media (min-width: 992px) {
+  .shangpinxaingqing {
+    margin-top: 30px;
+    margin-left:20px;
+  }
 }
