--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-md-10 col-md-offset-1 bg-white space-50">
-        <div class="preview col-md-7  space-50" >
+    <div class="col-md-10 col-md-offset-1   bg-white space-50">
+        <div class="preview col-md-7   space-50" >
             <div class="preview-pic tab-content" >
                 <% if @product.photos.present? %>
                     <div class="tab-pane active" id="pic-1"><%= image_tag(@product.photos[0].image.medium.url) %></div>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="product-show-part">
-            <div class="product-details col-md-5 space-50 ">
+            <div class="product-details col-md-5  space-50 ">
                 <h3><%= @product.title %></h3>
                 <h4><%= @product.slogan %></h4>
                 <div class="price-service">
@@ -87,8 +87,8 @@
             </div>
         </div>
     </div>
-    <div class="col-md-10 col-md-offset-1 bg-white space-20">
-        <h3 class="space-30">商品详情：</h3>
+    <div class="col-md-10 col-md-offset-1 col-sm-12 col-sm-offset-0 bg-white space-20">
+        <h3 class="shangpinxaingqing" >商品详情：</h3>
         <div class="post-description space-30">
             <%= raw @product.description %>
         </div>
