--- a/app/views/account/orders/index.html.erb
+++ b/app/views/account/orders/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 ">
             <h3 class="center space-50"><i class='fa fa-credit-card'></i> 历史订单</h3>
             <table class="table ">
                 <thead>
