--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row content-box">
-    <div class="col-md-10 col-md-offset-1">
+    <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
         <h3 class="center space-50"><i class='fa fa-shopping-cart'></i> 购物车</h3>
         <span class='pull-right commonlink'><%= link_to("一键清空购物车", clean_carts_path,method: :delete,data: {confirm: "你确定要清空整个购物车吗？"})%>
         </span>
@@ -7,11 +7,11 @@
         <hr style="height:2.5px">
         <div class="row ">
             <% if current_cart.cart_items.length > 0 %>
-                <div class='col-xs-12 col-md-8 cart-item-box'>
+                <div class='col-xs-12  col-md-8 cart-item-box'>
                     <% current_cart.cart_items.each do |cart_item| %>
                         <!-- 商品圖片 -->
                         <div class="row commonlink" style="padding-left: 20px;padding-bottom:15px;">
-                            <div class="col-md-2">
+                            <div class="col-sm-2 ">
                                 <% if cart_item.product.photos.present? %>
                                     <%= image_tag(cart_item.product.photos[0].image.thumb.url ) %>
                                 <% else %>
@@ -19,11 +19,11 @@
                                 <% end %>
                             </div>
                             <!-- 商品名稱 -->
-                            <div class="name col-md-5"><%= link_to(cart_item.product.title, product_path(cart_item.product))%></div>
+                            <div class="name col-sm-5"><%= link_to(cart_item.product.title, product_path(cart_item.product))%></div>
                             <!-- 商品單價 -->
-                            <div class="price col-md-1">  <%= cart_item.product.price %></div>
+                            <div class="price col-sm-1">  <%= cart_item.product.price %></div>
                             <!-- 商品數量 -->
-                            <div class="quantity col-md-2">
+                            <div class="quantity col-sm-2">
                                 <span>x</span>
                                 <div style="display: inline-block;">
                                     <%= form_for cart_item, url: cart_item_path(cart_item.product_id) do |f| %>
@@ -33,9 +33,9 @@
                                 </div>
                             </div>
                             <!-- 商品總價（單錢 x 數量） -->
-                            <div class="count col-md-1" ><%= render_product_price_count(cart_item.product,cart_item.quantity) %></div>
+                            <div class="count col-sm-1" ><%= render_product_price_count(cart_item.product,cart_item.quantity) %></div>
                             <!-- 移除單項商品 -->
-                            <div class="remove col-md-1">
+                            <div class="remove col-sm-1">
                                 <%= link_to cart_item_path(cart_item.product_id), method: :delete do %>
                                     <i class="fa fa-remove"></i>
                                 <% end %>
@@ -50,7 +50,7 @@
                     <!-- 循环结束 -->
                 </div>
                 <!--=== 顯示購物車小計、結帳按鈕 ===-->
-                <div class='col-xs-12 col-md-4 cart-checkout-box'>
+                <div class='cart-checkout-box col-xs-12 col-md-4 ' style="padding: 50px;">
                     <div class='clearfix'>
                         <span class='pull-left'>小计</span>
                         <span class='pull-right'><%= render_cart_total_price(current_cart) %></span>
