--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -10,7 +10,7 @@
                 <div class='col-xs-12 col-md-12 cart-item-box'>
                     <% current_cart.cart_items.each do |cart_item| %>
                         <div class="row commonlink" style="padding-left: 20px;padding-bottom:15px;">
-                            <div class="col-md-2">
+                            <div class="col-sm-2 col-xs-2">
                                 <% if cart_item.product.photos.present? %>
                                     <!-- 顯示第一張圖片 -->
                                     <%= image_tag(cart_item.product.photos[0].image.thumb.url ) %>
@@ -18,10 +18,10 @@
                                     <%= image_tag('http://placehold.it/200x200&text=No Pic') %>
                                 <% end %>
                             </div>
-                            <div class='name col-md-6'><%= link_to(cart_item.product.title, product_path(cart_item.product)) %></div>
-                            <div class='price col-md-1'><%= cart_item.product.price %></div>
-                            <div class='quantity col-md-2'>x <%= cart_item.quantity %></div>
-                            <div class='count col-md-1'> <%= render_product_price_count(cart_item.product,cart_item.quantity) %></div>
+                            <div class='name col-sm-6 col-xs-4'><%= link_to(cart_item.product.title, product_path(cart_item.product)) %></div>
+                            <div class='price col-sm-1 col-xs-2'><%= cart_item.product.price %></div>
+                            <div class='quantity col-sm-2 col-xs-2'>x <%= cart_item.quantity %></div>
+                            <div class='count col-sm-1 col-xs-2'> <%= render_product_price_count(cart_item.product,cart_item.quantity) %></div>
                         </div>
                     <% end %>
                 </div>
@@ -33,7 +33,7 @@
             </div>
             <hr/>
             <!--=== 訂單資訊 ===-->
-            <div class='col-md-6 col-md-offset-3'>
+            <div class='col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1'>
                 <h3 class="center"><i class='fa fa-credit-card'></i> 订单信息</h3>
                 <!--=== 下訂表單 ===-->
                 <div class='order-form'>
