--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -199,10 +199,10 @@ font-size: 18px;
     padding-left:10px;padding-right:0px;
   }
   a.buy{
-    background-color:#2196F3;color: #fff;margin-bottom:10px;
+    background-color:#225599;color: #fff;margin-bottom:10px;
   }
   a.add-to-cart{
-    border-color:#2196F3;background-color:#fff;color:#2196F3;
+    border-color:#225599;background-color:#fff;color:#225599;
     // #37474F
   }
 
