--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -18,7 +18,7 @@
                 <li class="zsy-li" ><%= link_to("首页", root_path )%></li>
                 <li class="zsy-li" ><%= link_to("产品", warehouse_products_path )%></li>
                 <li class="zsy-li" ><%= link_to("方案", plansintroduction_posts_path )%></li>
-                <li class="zsy-li" ><%= link_to("商城", products_path )%></li>
+                <!-- <li class="zsy-li" ><%= link_to("商城", products_path )%></li> -->
                 <li class="zsy-li" ><%= link_to("无线知识", wirelessinfo_posts_path )%></li>
                 <li class="zsy-li" ><%= link_to("网络知识", netinfo_posts_path )%></li>
                 <li class="zsy-li" ><%= link_to("云管理", contactus_posts_path )%></li>
