--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -87,7 +87,7 @@
         <!-- CW -->
         <div class="container-fluid">
             <div class="row space-20">
-                <h3 class="cp-title left-15">CW系列 <span class="cp-title-2 left-15">先进科技 业界领先</span></h3>
+                <h3 class="cp-title left-15">CW系列 <span class="cp-title-2 left-15">先进技术 业界领先</span></h3>
             </div>
             <div class="row" >
                 <% @productscw.each do |product| %>
@@ -114,7 +114,7 @@
         <!--sw  -->
         <div class="container-fluid">
             <div class="row space-20">
-                <h3 class="cp-title left-15">SW系列 <span class="cp-title-2 left-15">先进科技 业界领先</span></h3>
+                <h3 class="cp-title left-15">SW系列 <span class="cp-title-2 left-15">超强性能 持久稳定</span></h3>
             </div>
             <div class="row">
                 <% @productssw.each do |product| %>
