--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -16,6 +16,9 @@
         <div class="group">
             <%= f.input :price ,:label => "价格"%>
         </div>
+        <div class="group">
+            <%= f.input :feature ,:label => "特点"%>
+        </div>
         <br>
         <div class="group">
             <% Product::CATEGORY.each do |category| %>
