--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -48,8 +48,7 @@
                 </div>
                 <div class="quantity-size">
                     <p class="delivery space-20">类别： <span class="delivery"><%= @product.category %></span></p>
-                    <div style="margin-top:200px;">
-                    </div>
+                    <p class="price space-20">产品特点： <%= @product.feature %></p>
                 </div>
                 <div class="action space-20">
                     <div class="col-md-12">
