--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -10,18 +10,18 @@
                 <div class='col-xs-12 col-md-12 cart-item-box'>
                     <% current_cart.cart_items.each do |cart_item| %>
                         <div class="row commonlink" style="padding-left: 20px;padding-bottom:15px;">
-                            <div class="col-sm-2 col-xs-2">
+                            <!-- <div class="col-sm-2 col-xs-2">
                                 <% if cart_item.product.photos.present? %>
-                                    <!-- 顯示第一張圖片 -->
+
                                     <%= image_tag(cart_item.product.photos[0].image.thumb.url ) %>
                                 <% else %>
                                     <%= image_tag('http://placehold.it/200x200&text=No Pic') %>
                                 <% end %>
-                            </div>
-                            <div class='name col-sm-6 col-xs-4'><%= link_to(cart_item.product.title, product_path(cart_item.product)) %></div>
-                            <div class='price col-sm-1 col-xs-2'><%= cart_item.product.price %></div>
+                            </div> -->
+                            <div class='name col-sm-6 col-xs-6'><%= link_to(cart_item.product.title, product_path(cart_item.product)) %></div>
+                            <div class='price col-sm-1 col-xs-1'><%= cart_item.product.price %></div>
                             <div class='quantity col-sm-2 col-xs-2'>x <%= cart_item.quantity %></div>
-                            <div class='count col-sm-1 col-xs-2'> <%= render_product_price_count(cart_item.product,cart_item.quantity) %></div>
+                            <div class='count col-sm-1 col-xs-1'> <%= render_product_price_count(cart_item.product,cart_item.quantity) %></div>
                         </div>
                     <% end %>
                 </div>
